--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@ permalink: pretty
 title: 'S-CHOI-S'
 
 logo:
-  mobile: "images/logo/logo-mobile.svg"
+  mobile: "images/logo/S-CHOI-S_logo.svg"
   mobile_height: "32px"
   mobile_width: "32px"
-  desktop: "images/logo/logo.svg"
-  desktop_height: "32px"
-  desktop_width: "120px"
+  desktop: "images/logo/S-CHOI-S.svg"
+  desktop_height: "40px"
+  desktop_width: "210px"
 
 home: 
   limit_services: 6
