--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -3,7 +3,7 @@ main:
     url: "/about/"
     weight: 2
   - name: "Publications"
-    url: "/services/"
+    url: "/publications/"
     weight: 3
   - name: "Team"
     url: "/team/"
