--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 baseurl: '/'
-permalink: pretty
-title: 'Jekyll Serif'
+permalink: schois
+title: 'S-CHOI-S'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
