--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: 'solchoi@yonsei.ac.kr'
+location: 'Seoul, Republic of Korea'
 contact_button_link: 'contact'
