--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -11,6 +11,9 @@ main:
   - name: "Contact"
     url: "/contact/"
     weight: 5
+  - name: "Publications"
+    url: "/publications/"
+    weight: 6
 
 footer:
   - name: "Home"
