--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,18 +1,18 @@
 main:
-  - name: "Services"
-    url: "/services/"
-    weight: 2
-  - name: "Team"
-    url: "/team/"
-    weight: 3
   - name: "About"
     url: "/about/"
-    weight: 4
-  - name: "Contact"
-    url: "/contact/"
-    weight: 5
+    weight: 2
   - name: "Publications"
     url: "/publications/"
+    weight: 3
+  - name: "Research"
+    url: "/research/"
+    weight: 4
+  - name: "Links"
+    url: "/links/"
+    weight: 5
+  - name: "Contact"
+    url: "/contact/"
     weight: 6
 
 footer:
