--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ collections:
     sort_by: weight
   team:
     output: true
+  research:
+    output: true
 
 defaults:
   - scope:
@@ -31,6 +33,11 @@ defaults:
       type: "team"
     values:
       layout: "team"
+  - scope:
+      path: ""
+      type: "research"
+    values:
+      layout: "research"
 
 sass:
   style: compressed # possible values: nested expanded compact compressed
